--- a/src/app/components/network/room/room.component.scss
+++ b/src/app/components/network/room/room.component.scss
@@ -8,7 +8,7 @@
 .chat {
   width: 100%;
   color: #222222;
-  border-radius: 5px;
+  //border-radius: 5px;
   overflow-y: scroll;
   overflow-x: hidden;
   max-height: 100%;
@@ -171,7 +171,7 @@
   // background: rgb(193, 193, 193);
   // color: white !important;
   height: 25px;
-  color: rgba(255, 0, 0, 0.687) !important;
+  color: $red !important;
   box-shadow: none;
   font-size: 30px;
   display: flex;
