--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -22,7 +22,7 @@
     </li>
     <li>
         <h3 class="subtititle">Waarom moet ik mij registreren?</h3>
-        <p>Voor de Timetable, FAQ en Livestream pagina heb je geen account nodig. Op de andere pagina's kan je chatten met andere mensen, waarvoor je een account nodig hebt. Zo kunnen we jouw naam tonen en berichten onthouden zodat je die kwijt bent wanneer je uitlogt.
+        <p>Voor de Timetable, FAQ en Livestream pagina heb je geen account nodig. Op de andere pagina's kan je chatten met andere mensen, waarvoor je een account nodig hebt. Zo kunnen we jouw naam tonen en berichten onthouden zodat je die niet kwijt bent wanneer je uitlogt.
         </p>
     </li>
     <li>
