--- a/src/app/components/network/chat/chat.component.html
+++ b/src/app/components/network/chat/chat.component.html
@@ -24,7 +24,7 @@
         <p>functie</p>
       </div>
       </div>
-      <article class="flex column w-100 ">
+      <article class="flex column w-100 inner-wrap">
         <div #chatBox class="chat right " id="chat">
           <div id="childForScroll">
           <div class="msg animated zoomInUp" *ngFor="let msg of chat.messages; let i=index; trackBy: trackByCreated">
