--- a/src/app/components/network/chat/chat.component.scss
+++ b/src/app/components/network/chat/chat.component.scss
@@ -1,9 +1,11 @@
 @import '~src/styles.scss';
 .wrapper {
-
   display: flex;
   align-items: center;
   margin-top: 100px;
+}
+.deleteDots {
+  padding-right: 0.5em;
 }
 
 .chat {
@@ -209,7 +211,7 @@
     flex-direction: column;
     justify-content: space-between;
   }
-  #mobileHeader{
+  .mobileHeader{
     display: none
   }
   
@@ -267,6 +269,9 @@
     
     .chat::-webkit-scrollbar-track-piece:start {
     margin-top: 10%;
+    }
+    .wrapper{
+      width: 100%;
     }
 }
 
