--- a/src/app/components/network/room/room.component.scss
+++ b/src/app/components/network/room/room.component.scss
@@ -266,6 +266,9 @@
     .chat::-webkit-scrollbar-track-piece:start {
     margin-top: 10%;
     }
+    .wrapper{
+      width: 100%;
+    }
 }
 
 //mobile
