Juiste kleuren in kamers + small fixes

--- a/src/app/components/event/event.component.scss
+++ b/src/app/components/event/event.component.scss
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 
     .red-square{
-        background-color: $blue;
+        background-color: $yellow;
         width: 70vw;
         height: 25vh;
         margin-top: 80px;
