--- a/src/app/components/faq/faq.component.scss
+++ b/src/app/components/faq/faq.component.scss
@@ -76,7 +76,7 @@
   }
 
   .pagina.custom-scroll::-webkit-scrollbar-thumb {
-    background-color: grey;
+    background-color: $blue;
   }
 
   .pagina.custom-scroll::-webkit-scrollbar-track-piece:end {
