--- a/src/app/components/timetable/timetable.component.scss
+++ b/src/app/components/timetable/timetable.component.scss
@@ -29,7 +29,7 @@ a {
   .red-arrow {
     width: 10%;
     height: 100%;
-    background-color: $blue;
+    background-color: $yellow;
     display: flex;
     align-items: center;
 
@@ -40,7 +40,7 @@ a {
 }
 
 .currentActiveEvent{
-  background-color: $blue;
+  background-color: $yellow;
 }
 
 
@@ -102,7 +102,7 @@ a {
   }
 
   .selectedEvent {
-    background-color: $red;
+    background-color: $yellow;
   }
 
   .container-grid {
@@ -168,7 +168,7 @@ a {
   .red-arrow {
     width: 10%;
     height: 100%;
-    background-color: $blue;
+    background-color: $yellow;
     display: flex;
     align-items: center;
 
@@ -188,7 +188,7 @@ a {
   .red-arrow {
     width: 10%;
     height: 100%;
-    background-color: $red;
+    background-color: $yellow;
     display: flex;
     align-items: center;
 
