--- a/src/app/components/desktoplanding/desktoplanding.component.html
+++ b/src/app/components/desktoplanding/desktoplanding.component.html
@@ -1,6 +1,10 @@
+<div id="background"></div>
 <div #render id="canvas"></div>
-<h2 [hidden]="!loaded">FINAL SHOW <span>2020</span></h2>
-<div id="loadbarcontainer">
+<img src="assets/images/logo_sideways.svg" alt="" [hidden]="!loaded">
+
+
+
+<div id="loadbarcontainer" [hidden]="loaded">
   <h3 [hidden]="loaded">Loading Campus {{percentloaded}}</h3>
   <div id="loadbar" [style.width]="percentloaded" [hidden]="loaded"></div>
 
