--- a/src/app/components/network/chat/chat.component.scss
+++ b/src/app/components/network/chat/chat.component.scss
@@ -236,8 +236,9 @@
     }
   }
   .inner-wrap{
-    padding: 1em;
     height: calc(100% - 60px);
+    padding: 1em 1em 1em 0;
+    justify-content: flex-end;
   }
   .backgroundImageNetwork{
       grid-column: 1/ span 12;
@@ -247,7 +248,7 @@
     direction: rtl;
     padding-bottom: 0;
   }
-  .childForScroll{
+  #childForScroll{
     direction: ltr;
   }
   .chat::-webkit-scrollbar {
@@ -272,6 +273,9 @@
     }
     .wrapper{
       width: 100%;
+    }
+    .message-content{
+      margin-left: 1em;
     }
 }
 
