--- a/src/styles.scss
+++ b/src/styles.scss
@@ -209,6 +209,22 @@ h2, h3, h4, h5, h6 {
   align-self: center;
 }
 
+.pointer:hover{
+  cursor: pointer;
+}
+
+.registerImage{
+  grid-column: 2/span 5;
+  grid-row: 4/span 3;
+}
+
+.registerImage img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: scale(1.4);
+}
+
 // Andres css
 .flex {
   display: flex;
