--- a/src/app/components/desktopevent/desktopevent.component.html
+++ b/src/app/components/desktopevent/desktopevent.component.html
@@ -7,8 +7,13 @@
   </div>
   <div class="tekst-event">
     <h1 class="subtititle">{{event['name']}}</h1>
+    <span id="time" class="subtititle">{{displayTime(event['time'])}}</span>
     <p>{{event['desc']}}</p>
-    <h2 class="subtititle">credits to:</h2>
+    <div *ngIf="event['nominees']">
+      <h2 class="subtititle">credits to:</h2>
+      <ul class="nominees" *ngFor="let nominee of  event['nominees']">
+        <li>{{nominee}}</li>
+      </ul>
+    </div>
   </div>
-  <p id="time" class="subtititle">{{displayTime(event['time'])}}</p>
 </div>
