Icons groeps gesprekken

--- a/src/app/components/network/room/room.component.html
+++ b/src/app/components/network/room/room.component.html
@@ -14,7 +14,7 @@
         </aside>
       </section> -->
       <div class="chat-title-header">
-        <div class="group-icon"></div>
+        <div class="group-icon"><img [src] = "groupIcon(chat.roomName)"></div>
         <div>
         <h2>{{chat.roomName}}</h2>
         <p>Groep</p>
