--- a/src/app/components/timetable/timetable.component.html
+++ b/src/app/components/timetable/timetable.component.html
@@ -1,5 +1,6 @@
 <div class="wrapper container-grid" id="wrapper">
   <app-header title='Programma' class= "yellow"></app-header>
+  <app-notification [notif]=room></app-notification>
   <ul #timetableHtmlList (scroll)="showEvent()">
     <li #eventListItems *ngFor='let event of timetable' class="timetable-list-item">
       <span class="time-text">{{displayTime(event["time"]) }}</span>
